--- a/LOLViewer/LOLViewer.csproj
+++ b/LOLViewer/LOLViewer.csproj
@@ -65,6 +65,7 @@
     <Compile Include="GL\GLModel.cs" />
     <Compile Include="GL\GLRenderer.cs" />
     <Compile Include="GL\GLShader.cs" />
+    <Compile Include="GL\GLShaderDefinitions.cs" />
     <Compile Include="GL\GLShaderProgram.cs" />
     <Compile Include="GL\GLStaticModel.cs" />
     <Compile Include="GL\GLTexture.cs" />
